--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
                         <version>5.6.0</version>
                         <type>jar</type>
                 </dependency>
+                <dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>sendgrid-java</artifactId>
+			<version>4.0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
